--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <title>Alex A</title>
 </head>
 <body>
+    <!--nav bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Alex Adrian</a>
+          <h2>Alex Adrian</h2>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -35,5 +36,18 @@
           </div>
         </div>
       </nav>
+    <!--About me-->
+    <main>
+        <section class="about-me">
+            <h2>About Me</h2>
+            <p>My name is Alex, and as a software engineering student, I am passionate about creating efficient and innovative solutions to complex problems. My curiosity and passion for technology have driven me to constantly seek out new knowledge and skills in the field.</p>
+            <p>Through my coursework and various projects, I have gained experience in many programming languages such as JavaScript, Python, and C. I have also worked with databases, web development, and software development methodologies like Agile and Scrum. Additionally, I have experience working with version control systems such as Git.</p>
+            <p>I am a proactive and detail-oriented individual with strong problem-solving skills. I am able to work effectively both independently and as part of a team. I am also dedicated to producing high-quality work and continuously improving my skills and knowledge.</p>
+            <p>I am excited to continue learning and growing in this field and to contribute my skills and knowledge to innovative projects.</p>   
+        </section>  
+        <section class="profile-pic-cont"> 
+            <img class="profile-pic" src="images/prof-pic.jpg" alt="Alex Adrian">
+        </section>
+    </main>
 </body>
 </html>
