--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <!--internal ccs-->
     <link rel="stylesheet" href="styles.css">
+    <!--icons-->
+    <script src="https://kit.fontawesome.com/1758f4d784.js" crossorigin="anonymous"></script>
     <!--js-->
     <script defer src="index.js"></script>
     <title>Alex A</title>
@@ -47,6 +49,16 @@
         </section>  
         <section class="profile-pic-cont"> 
             <img class="profile-pic" src="images/prof-pic.jpg" alt="Alex Adrian">
+        </section>
+        <section>
+          <h2>Skills</h2>
+          <i class="fa-brands fa-html5 icon"></i>
+          <i class="fa-brands fa-css3-alt icons"></i>
+          <i class="fa-brands fa-js icons"></i>
+          <i class="fa-brands fa-git icons"></i>
+          <i class="fa-brands fa-github icons"></i>
+          <i class="fa-brands fa-node icons"></i>
+          <i class="fa-solid fa-terminal icons"></i>
         </section>
     </main>
 </body>
