home page structure done

--- a/index.html
+++ b/index.html
@@ -42,15 +42,17 @@
     <main>
         <section class="about-me">
             <h2>About Me</h2>
-            <p>My name is Alex, and as a software engineering student, I am passionate about creating efficient and innovative solutions to complex problems. My curiosity and passion for technology have driven me to constantly seek out new knowledge and skills in the field.</p>
-            <p>Through my coursework and various projects, I have gained experience in many programming languages such as JavaScript, Python, and C. I have also worked with databases, web development, and software development methodologies like Agile and Scrum. Additionally, I have experience working with version control systems such as Git.</p>
-            <p>I am a proactive and detail-oriented individual with strong problem-solving skills. I am able to work effectively both independently and as part of a team. I am also dedicated to producing high-quality work and continuously improving my skills and knowledge.</p>
-            <p>I am excited to continue learning and growing in this field and to contribute my skills and knowledge to innovative projects.</p>   
+            <div class="about-txt">
+              <p>My name is Alex, and as a software engineering student, I am passionate about creating efficient and innovative solutions to complex problems. My curiosity and passion for technology have driven me to constantly seek out new knowledge and skills in the field.</p>
+              <p>Through my coursework and various projects, I have gained experience in many programming languages such as JavaScript, Python, and C. I have also worked with databases, web development, and software development methodologies like Agile and Scrum. Additionally, I have experience working with version control systems such as Git.</p>
+              <p>I am a proactive and detail-oriented individual with strong problem-solving skills. I am able to work effectively both independently and as part of a team. I am also dedicated to producing high-quality work and continuously improving my skills and knowledge.</p>
+              <p>I am excited to continue learning and growing in this field and to contribute my skills and knowledge to innovative projects.</p>   
+            </div>
         </section>  
         <section class="profile-pic-cont"> 
             <img class="profile-pic" src="images/prof-pic.jpg" alt="Alex Adrian">
         </section>
-        <section>
+        <section class="skills">
           <h2>Skills</h2>
           <i class="fa-brands fa-html5 icon"></i>
           <i class="fa-brands fa-css3-alt icons"></i>
@@ -61,5 +63,8 @@
           <i class="fa-solid fa-terminal icons"></i>
         </section>
     </main>
+    <footer>
+      <p>Alex Adrian <i class="fa-regular fa-copyright"></i></p>
+    </footer>
 </body>
 </html>
