--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <script src="https://kit.fontawesome.com/1758f4d784.js" crossorigin="anonymous"></script>
     <!--js-->
     <script defer src="index.js"></script>
-    <title>Alex Projects</title>
+    <title>Alex Contact</title>
 </head>
 
 <body>
@@ -44,33 +44,17 @@
             </div>
         </div>
     </nav>
-    <!--projects-->
-    <main>
-        <h2>Projects</h2>
-    </main>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-4 img-cont">
-                <h1>Fortune Teller</h1>
-                <img class="proj-img" src="images/f-t-img.png" alt="">
-            </div>
-            <div class="col-4 img-cont">
-                <h1>Simon Says</h1>
-                <img class="proj-img" src="images/s-s-img.jpg" alt="">
-            </div>
-            <div class="col-4 img-cont">
-                <h1>Landing page</h1>
-                <img class="proj-img" src="images/r-a-img.jpg" alt="">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 img-cont">
-                <h1>Drum Set</h1>
-                <img class="proj-img" src="images/d-s-img.jpg" alt="">
-            </div>
-        </div>
+
+    <!--contact me-->
+    <div class="main-cont">
+        <h2>Contact</h2>
+        <a class="icon" href="https://www.linkedin.com/in/alex-adrian/" target="_blank"><i
+                class="fa-brands fa-linkedin"></i></a>
+        <a class="icons" href="mailto: s.termina@yahoo.com"><i class="fa-solid fa-envelope"></i></a>
+        <a class="icons" href="https://github.com/SinRemover" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
-    <footer>
+
+    <footer class="cont-foot">
         <p>Alex Adrian <i class="fa-regular fa-copyright"></i></p>
     </footer>
 </body>
