--- a/index.html
+++ b/index.html
@@ -1,70 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <!--internal ccs-->
-    <link rel="stylesheet" href="styles.css">
-    <!--icons-->
-    <script src="https://kit.fontawesome.com/1758f4d784.js" crossorigin="anonymous"></script>
-    <!--js-->
-    <script defer src="index.js"></script>
-    <title>Alex A</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--bootstrap-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <!--internal ccs-->
+  <link rel="stylesheet" href="styles.css">
+  <!--icons-->
+  <script src="https://kit.fontawesome.com/1758f4d784.js" crossorigin="anonymous"></script>
+  <!--js-->
+  <script defer src="index.js"></script>
+  <title>Alex A</title>
 </head>
+
 <body>
-    <!--nav bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <h2>Alex Adrian</h2>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">About Me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="projects.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    <!--About me-->
-    <main>
-        <section class="about-me">
-            <h2>About Me</h2>
-            <div class="about-txt">
-              <p>My name is Alex, and as a software engineering student, I am passionate about creating efficient and innovative solutions to complex problems. My curiosity and passion for technology have driven me to constantly seek out new knowledge and skills in the field.</p>
-              <p>Through my coursework and various projects, I have gained experience in many programming languages such as JavaScript, Python, and C. I have also worked with databases, web development, and software development methodologies like Agile and Scrum. Additionally, I have experience working with version control systems such as Git.</p>
-              <p>I am a proactive and detail-oriented individual with strong problem-solving skills. I am able to work effectively both independently and as part of a team. I am also dedicated to producing high-quality work and continuously improving my skills and knowledge.</p>
-              <p>I am excited to continue learning and growing in this field and to contribute my skills and knowledge to innovative projects.</p>   
-            </div>
-        </section>  
-        <section class="profile-pic-cont"> 
-            <img class="profile-pic" src="images/prof-pic.jpg" alt="Alex Adrian">
-        </section>
-        <section class="skills">
-          <h2>Skills</h2>
-          <i class="fa-brands fa-html5 icon"></i>
-          <i class="fa-brands fa-css3-alt icons"></i>
-          <i class="fa-brands fa-js icons"></i>
-          <i class="fa-brands fa-git icons"></i>
-          <i class="fa-brands fa-github icons"></i>
-          <i class="fa-brands fa-node icons"></i>
-          <i class="fa-solid fa-terminal icons"></i>
-        </section>
-    </main>
-    <footer>
-      <p>Alex Adrian <i class="fa-regular fa-copyright"></i></p>
-    </footer>
+  <!--nav bar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <h2>Alex Adrian</h2>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!--About me-->
+  <main>
+    <section class="about-me">
+      <h2>About Me</h2>
+      <div class="about-txt">
+        <p>My name is Alex, and as a software engineering student, I am passionate about creating efficient and
+          innovative solutions to complex problems. My curiosity and passion for technology have driven me to constantly
+          seek out new knowledge and skills in the field.</p>
+        <p>Through my coursework and various projects, I have gained experience in many programming languages such as
+          JavaScript, Python, and C. I have also worked with databases, web development, and software development
+          methodologies like Agile and Scrum. Additionally, I have experience working with version control systems such
+          as Git.</p>
+        <p>I am a proactive and detail-oriented individual with strong problem-solving skills. I am able to work
+          effectively both independently and as part of a team. I am also dedicated to producing high-quality work and
+          continuously improving my skills and knowledge.</p>
+        <p>I am excited to continue learning and growing in this field and to contribute my skills and knowledge to
+          innovative projects.</p>
+      </div>
+    </section>
+    <section class="profile-pic-cont">
+      <img class="profile-pic" src="images/prof-pic.jpg" alt="Alex Adrian">
+    </section>
+    <section class="skills">
+      <h2>Skills</h2>
+      <i class="fa-brands fa-html5 icon"></i>
+      <i class="fa-brands fa-css3-alt icons"></i>
+      <i class="fa-brands fa-js icons"></i>
+      <i class="fa-brands fa-git icons"></i>
+      <i class="fa-brands fa-github icons"></i>
+      <i class="fa-brands fa-node icons"></i>
+      <i class="fa-solid fa-terminal icons"></i>
+    </section>
+  </main>
+  <footer>
+    <p>Alex Adrian <i class="fa-regular fa-copyright"></i></p>
+  </footer>
 </body>
+
 </html>
