--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
   <!--nav bar-->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid navi">
       <h2>Alex Adrian</h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
       <i class="fa-solid fa-terminal icons"></i>
     </section>
   </main>
-  <footer>
+  <footer class=".m-t-2">
     <p>Alex Adrian <i class="fa-regular fa-copyright"></i></p>
   </footer>
 </body>
