--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,8 @@
 
 <body>
     <!--nav bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid navi">
             <h2>Alex Adrian</h2>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,21 +52,21 @@
         <div class="row">
             <div class="col-4 img-cont">
                 <h1>Fortune Teller</h1>
-                <img class="proj-img" src="images/f-t-img.png" alt="">
+                <a href="https://sinremover.github.io/Fortune-Teller/" target="_blank"><img class="proj-img" src="images/f-t-img.png" alt=""></a>
             </div>
             <div class="col-4 img-cont">
                 <h1>Simon Says</h1>
-                <img class="proj-img" src="images/s-s-img.jpg" alt="">
+                <a href="https://sinremover.github.io/Simon-says/" target="_blank"><img class="proj-img" src="images/s-s-img.jpg" alt=""></a>
             </div>
             <div class="col-4 img-cont">
                 <h1>Landing page</h1>
-                <img class="proj-img" src="images/r-a-img.jpg" alt="">
+                <a href="https://sinremover.github.io/Recipe-app-site/" target="_blank"><img class="proj-img" src="images/r-a-img.jpg" alt=""></a>
             </div>
         </div>
         <div class="row">
             <div class="col-12 img-cont">
                 <h1>Drum Set</h1>
-                <img class="proj-img" src="images/d-s-img.jpg" alt="">
+                <a href="https://sinremover.github.io/Drum-set/" target="_blank"><img class="proj-img" src="images/d-s-img.jpg" alt=""></a>
             </div>
         </div>
     </div>
