--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
       </div>
     </div>
   </nav>
-
   <!--About me-->
   <main>
     <section class="about-me">
@@ -71,7 +70,7 @@
       <h2>Skills</h2>
       <i class="fa-brands fa-html5 icon"></i>
       <i class="fa-brands fa-css3-alt icons"></i>
-      <i class="fa-brands fa-js icons"></i>
+      <i class="fa-brands fa-js icons" onclick="paintMode()"></i>
       <i class="fa-brands fa-git icons"></i>
       <i class="fa-brands fa-github icons"></i>
       <i class="fa-brands fa-node icons"></i>
