--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
       <i class="fa-solid fa-terminal icons"></i>
     </section>
   </main>
+  <div class="sketch">
+    
+  </div>
   <footer class=".m-t-2">
     <p>Alex Adrian <i class="fa-regular fa-copyright"></i></p>
   </footer>
