add mobile support

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!--nav bar-->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid navi">
-      <h2>Alex Adrian</h2>
+      <h2 class="navi-tit">Alex Adrian</h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
   <!--About me-->
   <main>
     <section class="about-me">
-      <h2>About Me</h2>
+      <h2 class="abt-tit">About Me</h2>
       <div class="about-txt">
         <p>My name is Alex, and as a software engineering student, I am passionate about creating efficient and
           innovative solutions to complex problems. My curiosity and passion for technology have driven me to constantly
@@ -67,10 +67,10 @@
       <img class="profile-pic" src="images/prof-pic.jpg" alt="Alex Adrian">
     </section>
     <section class="skills">
-      <h2>Skills</h2>
+      <h2 class="abt-tit">Skills</h2>
       <i class="fa-brands fa-html5 icon"></i>
       <i class="fa-brands fa-css3-alt icons"></i>
-      <i class="fa-brands fa-js icons" onclick="paintMode()"></i>
+      <i class="fa-brands fa-js icons" onclick="paintMode(); paintModeMobile();"></i>
       <i class="fa-brands fa-git icons"></i>
       <i class="fa-brands fa-github icons"></i>
       <i class="fa-brands fa-node icons"></i>
