--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid navi">
-            <h2>Alex Adrian</h2>
+            <h2 class="navi-tit">Alex Adrian</h2>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -46,27 +46,29 @@
     </nav>
     <!--projects-->
     <main>
-        <h2>Projects</h2>
+        <h2 class="abt-tit">Projects</h2>
     </main>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-4 img-cont">
-                <h1>Fortune Teller</h1>
-                <a href="https://sinremover.github.io/Fortune-Teller/" target="_blank"><img class="proj-img" src="images/f-t-img.png" alt=""></a>
+            <div class="col-4 col-huge-6 col-med-12 img-cont">
+                <h1 class="abt-tit">Fortune Teller</h1>
+                <a href="https://sinremover.github.io/Fortune-Teller/" target="_blank"><img class="proj-img"
+                        src="images/f-t-img.png" alt=""></a>
             </div>
-            <div class="col-4 img-cont">
-                <h1>Simon Says</h1>
-                <a href="https://sinremover.github.io/Simon-says/" target="_blank"><img class="proj-img" src="images/s-s-img.jpg" alt=""></a>
+            <div class="col-4 col-huge-6 col-med-12 img-cont">
+                <h1 class="abt-tit">Simon Says</h1>
+                <a href="https://sinremover.github.io/Simon-says/" target="_blank"><img class="proj-img"
+                        src="images/s-s-img.jpg" alt=""></a>
             </div>
-            <div class="col-4 img-cont">
-                <h1>Landing page</h1>
-                <a href="https://sinremover.github.io/Recipe-app-site/" target="_blank"><img class="proj-img" src="images/r-a-img.jpg" alt=""></a>
+            <div class="col-4 col-huge-6 col-med-12 img-cont">
+                <h1 class="abt-tit">Landing page</h1>
+                <a href="https://sinremover.github.io/Recipe-app-site/" target="_blank"><img class="proj-img"
+                        src="images/r-a-img.jpg" alt=""></a>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-12 img-cont">
-                <h1>Drum Set</h1>
-                <a href="https://sinremover.github.io/Drum-set/" target="_blank"><img class="proj-img" src="images/d-s-img.jpg" alt=""></a>
+            <div class="col-12 col-huge-6 col-med-12 img-cont">
+                <h1 class="abt-tit">Drum Set</h1>
+                <a href="https://sinremover.github.io/Drum-set/" target="_blank"><img class="proj-img"
+                        src="images/d-s-img.jpg" alt=""></a>
             </div>
         </div>
     </div>
