--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid navi">
-            <h2>Alex Adrian</h2>
+            <h2 class="navi-tit">Alex Adrian</h2>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
 
     <!--contact me-->
     <div class="main-cont">
-        <h2>Contact</h2>
+        <h2 class="abt-tit">Contact</h2>
         <a class="icon" href="https://www.linkedin.com/in/alex-adrian/" target="_blank"><i
                 class="fa-brands fa-linkedin"></i></a>
         <a class="icons" href="mailto: s.termina@yahoo.com"><i class="fa-solid fa-envelope"></i></a>
