add tiny screen support

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <i class="fa-brands fa-css3-alt icons"></i>
       <i class="fa-brands fa-js icons" onclick="paintMode(); paintModeMobile();"></i>
       <i class="fa-brands fa-git icons"></i>
-      <i class="fa-brands fa-github icons"></i>
+      <i class="fa-brands fa-github icons hub"></i>
       <i class="fa-brands fa-node icons"></i>
       <i class="fa-solid fa-terminal icons"></i>
     </section>
