add css animation

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="skills">
       <h2 class="abt-tit">Skills</h2>
       <i class="fa-brands fa-html5 icon"></i>
-      <i class="fa-brands fa-css3-alt icons"></i>
+      <i class="fa-brands fa-css3-alt icons" id="rainbow-icon"></i>
       <i class="fa-brands fa-js icons" onclick="paintMode(); paintModeMobile();"></i>
       <i class="fa-brands fa-git icons"></i>
       <i class="fa-brands fa-github icons hub"></i>
