--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <!--js-->
   <script defer src="index.js"></script>
   <title>Alex A</title>
+  <!--favicon-->
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -78,7 +80,7 @@
     </section>
   </main>
   <div class="sketch">
-    
+
   </div>
   <footer class=".m-t-2">
     <p>Alex Adrian <i class="fa-regular fa-copyright"></i></p>
