--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,8 @@
     <!--js-->
     <script defer src="index.js"></script>
     <title>Alex Projects</title>
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
